<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/title_help" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/title_about" />
        <item
            android:id="@+id/nav_admin_mode"
            android:title="@string/title_admin_mode" />
    </group>
</menu>
